<resources>
    <string name="app_name">CafeOrder</string>
    <string name="logo_description">Логотип кафе.</string>
    <string name="welcome">Добро пожаловать !</string>
    <string name="hint_name">Введите ваше имя:</string>
    <string name="hint_password">Введите ваш пароль:</string>
    <string name="button_create_order">Создать заказ</string>
    <string name="warning_fill_fills">Все поля должны быть заполнены</string>
    <string name="Hello_user">Привет, %s! Что будете заказывать ?</string>
    <string name="Tea">Чай</string>
    <string name="coffee">Кофе</string>
    <string name="additions">Что добавить в ваш %s</string>
    <string name="milk">Молоко</string>
    <string name="Sugar">Сахар</string>
    <string name="Lemon">Лемон</string>
    <string name="choose_drink">Выберете вид напитка</string>
    <string name="button_send_description">Кнопка отправить заказ</string>
    <string name="default_name">клиент</string>
    <string name="default_password">пароль</string>
    <string name="order">Имя: %s\nПароль: %s \nНапиток: %s\nВид напитка: %s\n</string>
    <string name="need_additions">\"Необходимые добавки: \"</string>
    <string-array name="options_of_coffee">

        <item>Американо</item>
        <item>Эспрессо</item>
        <item>Латте</item>
    </string-array>

    <string-array name="options_of_tea">
        <item>Черный</item>
        <item>Зеленый</item>
        <item>Крассный</item>
    </string-array>

</resources>