<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightBrown"
    >


    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/welcome"
        android:src="@drawable/logo"

        />

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textStyle="bold"
        android:textSize="36sp"
        android:textColor="@color/Black"
        />

    <EditText
        android:layout_margin="8dp"
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/darkBrown"
        android:autofillHints=""
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:textColorHint="@color/darkBrown"
        android:textStyle="bold"


        />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="@color/darkBrown"
        android:textColorHint="@color/darkBrown"
        android:textStyle="bold"
        android:layout_margin="8dp"
        />

    <Button
        android:onClick="onClickCreateOrder"
        android:layout_margin="8dp"
        android:id="@+id/buttonCreateOrder"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:text="@string/button_create_order"
        android:textSize="24sp"
        android:background="@color/White"
        android:textColor="@color/darkBrown"
        />

</LinearLayout>